--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,33 @@ lib/*.*
 .godot
 .godot/*
 .godot/*.*
+
+# Godot 4+ specific ignores
+.godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# System/tool-specific ignores
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*~
+
+# Build directories
+builds/
+export/
+
+# Save files
+*.save
